2002-05-17  Darin Adler  <darin@apple.com>

	* khtml/rendering/render_list.cpp: (RenderListItem::setStyle):
	Roll the change out while I see why it causes a crash.

prim2002-05-17  Darin Adler  <darin@apple.com>

	* khtml/rendering/render_list.cpp: (RenderListItem::setStyle):
	Remove an old incorrect fix for a style leak in here and put in
	a new correct fix.

2002-05-16  Richard J. Williamson  <rjw@apple.com>

	Fixed 2896350.  Ignore DPI in images and render directly at pixel size.
	
	* kwq/KWQPainter.mm:
	(QPainter::drawPixmap):
	* kwq/KWQPixmap.mm:
	(QPixmap::QPixmap):

2002-05-16  Richard J. Williamson  <rjw@apple.com>

	Fixed 2925638.  Don't send last progress message from resourceDataDidBecomeAvailable,
	it is sent from IFURLHandleResourceDidFinishLoading, avoiding duplication.
	
	* kwq/KWQKloader.mm:
	(-[URLLoadClient IFURLHandle:resourceDataDidBecomeAvailable:]):

2002-05-15  Richard J. Williamson  <rjw@apple.com>
    
    Alerts, useful for validating that js handlers work.
    Validated that onsubmit is working.
    
	* kwq/KWQKMessageBox.mm:
	(KMessageBox::error):
	(KMessageBox::warningYesNo):
	(KMessageBox::questionYesNo):
	(KMessageBox::sorry):

2002-05-15  Darin Adler  <darin@apple.com>

	* kwq/qt/qguardedptr.h: Fix reversed sense of check in isNull. Fixes
	a bug that was causing a lot of DHTML not to work.

2002-05-15  Kenneth Kocienda  <kocienda@apple.com>

	* kwq/KWQInvisibleButton.h: Changed an #include of Cocoa.h to an #import

2002-05-15  Darin Adler  <darin@apple.com>

	* kwq/KWQListImpl.mm:
	(KWQListImpl::KWQListPrivate::copyList): Take out unnecessary line of code.
	(KWQListImpl::KWQListPrivate::~KWQListPrivate): Delete the iterator nodes
	also, not just the item nodes. Fixes a storage leak.
	(KWQListIteratorImpl::KWQListIteratorPrivate::KWQListIteratorPrivate):
	Change interface to take a list pointer so we don't rely on the undefined
	behavior of &* on a null pointer.
	(KWQListImpl::addIterator): Set up the prev pointer of the old head of