@@ -128,6 +128,11 @@ void RenderListItem::setStyle(RenderStyle *_style)
     RenderFlow::setStyle(_style);
 
     RenderStyle *newStyle = new RenderStyle();
+    
+#ifdef APPLE_CHANGES
+    newStyle->ref();
+#endif
+    
     newStyle->inheritFrom(style());
     if(newStyle->direction() == LTR)
         newStyle->setFloating(FLEFT);
@@ -148,7 +153,7 @@ void RenderListItem::setStyle(RenderStyle *_style)
     }
 
 #ifdef APPLE_CHANGES
-    //newStyle->deref();
+    newStyle->deref();
 #endif
 }
 
