@@ -1,6 +1,11 @@
 2002-05-17  Darin Adler  <darin@apple.com>
 
 	* khtml/rendering/render_list.cpp: (RenderListItem::setStyle):
+	OK. This time it's correct.
+
+2002-05-17  Darin Adler  <darin@apple.com>
+
+	* khtml/rendering/render_list.cpp: (RenderListItem::setStyle):
 	Roll the change out while I see why it causes a crash.
 
 prim2002-05-17  Darin Adler  <darin@apple.com>
